--- a/test/mix.html
+++ b/test/mix.html
@@ -39,10 +39,10 @@
         <form>
             <textarea name='mix1' placeholder="type something">mixed-mode [[example]] with [[{"value":"tags"}]].</textarea>
 
-            <textarea name='mix2' class='tagify-editor' placeholder="type something">
+            <!-- <textarea name='mix2' class='tagify-editor' placeholder="type something">
             [[{"value":200, "text":"  cartman  ", "title":"Eric Cartman", "prefix":"@"}]] and [[{"value":1000, "text":"cartman", "title":"xxx", "prefix":"@", "readonly":true}]] [[kyle]] do not know [[homer simpson]] because he's a
     and [[{"value": "readonly", "readonly":true}]]
-            </textarea>
+            </textarea> -->
 
         </form>
 
