reverted last change

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             }(document)
         </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="dist/tagify.min.js"></script>
+        <script src="dist/jQuery.tagify.min.js"></script>
         <script src="https://unpkg.com/@yaireo/dragsort"></script>
 
         <script>
@@ -349,7 +349,6 @@
     </head>
 
     <body>
-        <output id='xxx'></output>
         <header>
             <a class='repoLink' title='Go To Repo' href='https://github.com/yairEO/tagify'>
                 <svg height="100%" viewBox="0 0 280 150" fill-rule="evenodd" fill="#444" xmlns="http://www.w3.org/2000/svg">
