--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                         <li>Only allow tags from the whitelist to exist</li>
                         <li>Manually create initial <em>whitelist</em> from the original input's value</li>
                         <li>Simulate fetching <em>whitelist</em> (from a server) as the user is typing</li>
-                        <li><em>"Remove all tags"</em> by an extrenal button</li>
+                        <li><em>"Remove all tags"</em> by an external button</li>
                         <li>Listen to various Tagify <a href='https://github.com/yairEO/tagify#events'>events</a></li>
                         <li>Un-listen to specific event (see <code>onAddTag</code> function)</li>
                     </ul>
