--- a/test/mix.html
+++ b/test/mix.html
@@ -39,10 +39,10 @@
         <form>
             <textarea name='mix1' placeholder="type something">mixed-mode [[example]] with [[{"value":"tags"}]].</textarea>
 
-            <!-- <textarea name='mix2' class='tagify-editor' placeholder="type something">
+            <textarea name='mix2' class='tagify-editor' placeholder="type something">
             [[{"value":200, "text":"  cartman  ", "title":"Eric Cartman", "prefix":"@"}]] and [[{"value":1000, "text":"cartman", "title":"xxx", "prefix":"@", "readonly":true}]] [[kyle]] do not know [[homer simpson]] because he's a
     and [[{"value": "readonly", "readonly":true}]]
-            </textarea> -->
+            </textarea>
 
         </form>
 
@@ -63,17 +63,17 @@ var settings = {
         enabled: 0,
         position: "text"
     },
-    whitelist: [1111,2222,3333,4444
-        // {id: 100, value: "kenny", title: "Kenny McCormick"},
-        // {id: 101, value: "cartman", title: "Eric Cartman"},
-        // {id: 102, value: "kyle", title: "Kyle Broflovski"},
-        // {id: 103, value: "token", title: "Token Black"},
-        // {id: 104, value: "jimmy", title: "Jimmy Valmer"},
-        // {id: 105, value: "butters", title: "Butters Stotch"},
-        // {id: 106, value: "stan", title: "Stan Marsh"},
-        // {id: 107, value: "randy", title: "Randy Marsh"},
-        // {id: 108, value: "Mr. Garrison", title: "POTUS"},
-        // {id: 109, value: "Mr. Mackey", title: "M'Kay"}
+    whitelist: [
+        {id: 100, value: "kenny", title: "Kenny McCormick"},
+        {id: 101, value: "cartman", title: "Eric Cartman"},
+        {id: 102, value: "kyle", title: "Kyle Broflovski"},
+        {id: 103, value: "token", title: "Token Black"},
+        {id: 104, value: "jimmy", title: "Jimmy Valmer"},
+        {id: 105, value: "butters", title: "Butters Stotch"},
+        {id: 106, value: "stan", title: "Stan Marsh"},
+        {id: 107, value: "randy", title: "Randy Marsh"},
+        {id: 108, value: "Mr. Garrison", title: "POTUS"},
+        {id: 109, value: "Mr. Mackey", title: "M'Kay"}
     ],
 }
 
