--- a/test/mode-select.html
+++ b/test/mode-select.html
@@ -37,7 +37,7 @@
     <body>
 
 
-        <input name='tags-select-mode' class='selectMode' placeholder="Please select" value="1" />
+        <input name='tags-select-mode' class='selectMode' placeholder="Please select" value="One" />
 
         <input name='tags-select-mode' class='selectMode' placeholder="Please select" value="1" />
 
@@ -48,6 +48,7 @@ var input = document.querySelector('input[name=tags-select-mode]'),
         tagTextProp : 'title',
         enforceWhitelist: true,
         keepInvalidTags: false,
+        maxTags: 1,
         whitelist: [
             { "id":"1", "value": 1, "title":"First option" },
             { "id":"2", "value": 2, "title":"Second option" },
@@ -57,6 +58,7 @@ var input = document.querySelector('input[name=tags-select-mode]'),
             {'value':'Item d',id:4},
             {'value':'Item e',id:5}
         ],
+        whitelist: ['One', 'Two', 'Three'],
         dropdown: {
             maxItems: 3,
             //mapValueTo: 'username',
