--- a/test/mode-select.html
+++ b/test/mode-select.html
@@ -58,7 +58,7 @@ var input = document.querySelector('input[name=tags-select-mode]'),
             {'value':'Item d',id:4},
             {'value':'Item e',id:5}
         ],
-        whitelist: ['One', 'Two', 'Three'],
+        whitelist: ['One', 'nighttst'],
         dropdown: {
             maxItems: 3,
             //mapValueTo: 'username',
