Fix anchor link in index.html

--- a/index.html
+++ b/index.html
@@ -1170,7 +1170,7 @@
             <section id='section-drag-sort'>
                 <aside class='leftSide'>
                     <header>
-                        <h2><a href='#section-mode-select'>Drag & Sort</a></h2>
+                        <h2><a href='#section-drag-sort'>Drag & Sort</a></h2>
                     </header>
                     <p>
                         To be able to sort tags by draging, a 3rd-party script is needed. In this example I will be using my own -
