--- a/index.html
+++ b/index.html
@@ -1636,7 +1636,7 @@ var input = document.querySelector('input[name=tags3]'),
         },
         templates: {
             dropdownItemNoMatch: function(data) {
-                return `<div class='${this.settings.classNames.dropdownItem}' tabindex="0" role="option">
+                return `<div class='${this.settings.classNames.dropdownItem}' tagifySuggestionIdx="noMatch" tabindex="0" role="option">
                     No suggestion found for: <strong>${data.value}</strong>
                 </div>`
             }
