minor text change

--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
                         <h2><a href='#section-no-user-input'>Disabled user input</a></h2>
                     </header>
                     <p>
-                        User cannot type or paste any input not edit already-exiting tags.<br>
+                        User <strong>cannot type</strong> or paste any input not edit already-exiting tags.<br>
                         Tags can only be selected from the suggestions list (<em>whitelist</em>) dropdown.
                     </p>
                     <details>
