fixes typos in 'Tags with Properties' section

--- a/index.html
+++ b/index.html
@@ -987,13 +987,13 @@
                         <h2><a href='#section-extra-properties'>Tags with properties</a></h2>
                     </header>
                     <p>
-                        Some cases requires more control per-tag, for exmaple, sending a different value to the server than the textual value
+                        Some cases requires more control per-tag, for example, sending a different value to the server than the textual value
                         the user sees/entered. Another example, would be different colors for different tags or tags' groups.
-                        it's possible to add any number of properties per tag, the only constant is the <code>value</code> property which
+                        It's possible to add any number of properties per tag, the only constant is the <code>value</code> property which
                         must be declared per-tag, and that will be the rendered text.
                     </p>
                     <p>
-                        The propeties shown in the example below, declared in the <code>allowedTags</code> Array, will be transformed into
+                        The properties shown in the example below, declared in the <code>allowedTags</code> Array, will be transformed into
                         HTML attributes for each tag element rendered from the allowed <code>whitelist</code> settings, so naturally
                         some attributes are in the specs and the made-up ones should technically be prefixed with <code>data-</code>.
                     </p>
