--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                   <details>
                     <summary></summary>
                     <h3>HTML</h3>
-<pre class="language-markup"><code><&#8203;input name='input-custom-dropdown' class='some_class_name' placeholder='write some tags' value='css, html, javascript'>
+<pre class="language-markup"><code><input name='input-custom-dropdown' class='some_class_name' placeholder='write some tags' value='css, html, javascript'>
 </code></pre>
                     <h3>JAVASCRIPT</h3>
                     <script>renderPRE(document.currentScript, "dropdown-tags")</script>
