--- a/index.html
+++ b/index.html
@@ -482,6 +482,7 @@
 <style contenteditable>
 .tags-look .tagify__dropdown__item{
   display: inline-block;
+  vertical-align: middle;
   border-radius: 3px;
   padding: .3em .5em;
   border: 1px solid #CCC;
@@ -499,6 +500,16 @@
 .tags-look .tagify__dropdown__item:hover{
   background: lightyellow;
   border-color: gold;
+}
+
+.tags-look .tagify__dropdown__item--hidden {
+    max-width: 0;
+    max-height: initial;
+    padding: .3em 0;
+    margin: .2em 0;
+    white-space: nowrap;
+    text-indent: -20px;
+    border: 0;
 }
 </style>
                     </details>
@@ -2468,7 +2479,7 @@ $('.tags-jquery--removeAllBtn').on('click', jqTagify.removeAllTags.bind(jqTagify
 
         knobs.settings.live = true
 
-        setTimeout(knobs.toggle.bind(knobs), 2000)
+        setTimeout(knobs.toggle.bind(knobs, false), 2000)
      })()
     </script>
     </body>
